05/02/23 -> PHP => Technos_content page now uses php vars to generate text translation.
05/02/23 -> HTML/CSS => tweaked the technos_content layout => sticky menu on the left when page min-width=1024px
07/02/23 -> HTML/PHP/JS => added data-attr in header that changes with $lang. Allows JS to read what language is used (for the slider in the projects page).
07/02/23 -> JS => added JS function for the auto play checkbox (projects page) + Esc key to close modal.
07/02/23 -> JS => added translations for the slider text (checks the data-attr lang and picks between FR array or EN array).
07/02/23 -> HTML/CSS/PHP => added contact form/style/icons.
07/02/23 -> PHP => PHPMailer + send-mail.php + redirection & message sent/error.
08/02/23 -> HTML/CSS => added CV/Resume page content + style.
08/02/23 -> PHP => added translations variables for Resume page.
09/02/23 -> PHP => added some missing translations.
25/04/23 -> PHP => added some translate variables (home & project page)
25/04/23 -> HTML/CSS => added some infos in homepage + icons
25/04/23 -> CSS => fixed padding on language settings 'FR' / 'EN'
25/04/23 -> General => Images & icons compression
25/04/23 -> CSS => added Burger menu close icon 
31/05/23 -> Removed 'guess the code langage..'
31/05/23 -> JS/HTML/CSS => added my custom tic-tac-toe game in homepage
31/05/23 -> HTML => removed custom game from homepage
31/05/23 -> HTML/CSS => modified homepage block disposition to get two separate sections (web dev/ai)
31/05/23 -> HTML/CSS => added AI skillset + icons
31/05/23 -> PHP => added translations variables for AI skillset
31/05/23 -> HTML/CSS => fixed W3C Validator errors for Home Page
31/05/23 -> minor fixes project page
01/06/23 -> HTML/CSS => updated resume, added blocks (skills web, skills data..)
01/06/23 -> PHP => added translations variables for the new resume
01/06/23 -> HTML/CSS => added my logo in footer
01/06/23 -> cleaned CSS file (alphabetical order inside classes + removed some comments)